# tftp_client

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: download.rs  upload.rs  upload_and_download.rs
src/: asynchronous.rs  blocking.rs  lib.rs  parser.rs
tests/: test_upload_and_download.rs
