[package]
name = "tftp_client"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/kiranshila/tftp_client"
description = "A pure-rust TFTP client library"
homepage = "https://github.com/kiranshila/tftp_client"
readme = "../README.md"
keywords = ["tftp"]
categories = ["network-programming"]

[dependencies]
byte-strings = "0.3"
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
paste = "1"
